# croissant

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  TODO.txt  TODO_det_negative_one.md  junit.xml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  push.yml  release.yml
core_tests/: test_beam.py  test_healpix.py  test_rotations.py  test_simulator.py  test_sphtransform.py
croissant/: __init__.py  beam.py  constants.py  coordinates.py  dpss.py  healpix.py  rotations.py  simulator.py  simulatorbase.py  sky.py  sphtransform.py  utils.py
croissant/core/: __init__.py  beam.py  healpix.py  rotations.py  simulator.py  sky.py  sphtransform.py
croissant/core/tests/: test_beam.py  test_healpix.py  test_rotations.py  test_simulator.py  test_sphtransform.py  test_utils.py
croissant/crojax/: __init__.py  beam.py  healpix.py  simulator.py  sky.py
croissant/crojax/tests/: test_beam.py  test_healpix.py
croissant/jax/: __init__.py  alm.py  alm2points.py  healpix.py  multipair.py  rotations.py  simulator.py  sky.py
croissant/jax/tests/: test_alm.py  test_beam.py  test_healpix.py  test_multipair.py  test_rotations.py  test_simulator.py
croissant/tests/: test_coordinates.py  test_simulator.py
docs/: math.md
notebooks/: collaborator_tests.ipynb  coordinate_frame_bug_tests.ipynb  croissant_jax.ipynb  dpss.ipynb  dpss_test.ipynb  example_sim-Copy1.ipynb  example_sim.ipynb  hera_sim_test.ipynb  jax_example.ipynb  mepa_precession.ipynb  multipair_example.ipynb  single_pixel.ipynb  test_analytic_beams.ipynb
src/croissant/: __init__.py  alm.py  beam.py  constants.py  multipair.py  rotations.py  simulator.py  sky.py  sphere.py  utils.py
src/croissant/core/: beam.py  healpix.py  sky.py
src/croissant/core/tests/: test_rotations.py
src/croissant/jax/: __init__.py  rotations.py
src/croissant/jax/tests/: test_alm.py
tests/: conftest.py  test_alm.py  test_beam.py  test_constants.py  test_coordinates.py  test_dpss.py  test_healpix.py  test_multipair.py  test_physics.py  test_rotations.py  test_sim_class.py  test_simulator.py  test_sky.py  test_sphere.py  test_sphtransform.py  test_utils.py
