[build-system]
requires = ["setuptools >= 65", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croissant"
version = "5.0.0"
description = """
CROISSANT: A differentiable visibility simulator based on spherical harmonics
"""
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "MIT License"}
authors = [{name = "Christian H. Bye", email = "chbye@berkeley.edu"}]
dependencies = [
  "astropy",
  "equinox",
  "jax",
  "lunarsky",
  "numpy",
  "s2fft",
]
classifiers = [
  "Development Status :: 5 - Production/Stable", 
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/christianhbye/croissant"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
  "--timeout=60",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"notebooks/*" = ["E402"]
"src/croissant/jax/__init__.py" = ["F403"]
"src/croissant/alm.py" = ["F401"]

[dependency-groups]
dev = [
  "healpy>=1.19.0",
  "ipympl>=0.10.0",
  "jupyterlab>=4.5.4",
  "jupyterlab-vim>=4.1.4",
  "matplotlib>=3.10.8",
  "pre-commit>=4.5.1",
  "pygdsm>=1.6.4",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]
