[metadata]
name = croissant-sim
version = 3.0.0
description = CROISSANT: Rapid spherical harmonics-based simulator of visibilities
long_description = file: README.md
author = Christian Hellum Bye
author_email = chbye@berkeley.edu
license = GPLv2
url = https://github.com/christianhbye/croissant
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >= 3.7
packages=find:
install_requires =
    astropy
    healpy
    hera-filters
    jupyter
    lunarsky
    matplotlib
    numpy
    scipy

[options.extras_require]
dev = 
    black
    build
    flake8
    mypy
    pytest
    pytest-cov
    twine

hera_sim =
    hera_sim[vis]
