[metadata]
name = croissant-sim
version = 4.1.2
description = CROISSANT: Rapid spherical harmonics-based simulator of visibilities
long_description = file: README.md
author = Christian Hellum Bye
author_email = chbye@berkeley.edu
license = MIT
url = https://github.com/christianhbye/croissant
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >= 3.10, < 3.14
packages=find:
install_requires =
    astropy
    hera-filters
    jupyter
    lunarsky
    matplotlib
    numpy
    pygdsm
    s2fft >= 1.4.0

[options.extras_require]
dev = 
    black
    build
    flake8
    mypy
    pytest
    pytest-cov
    twine

hera_sim =
    hera_sim[vis]

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
    croissant/core/__init__.py:F401
    croissant/jax/__init__.py:E402, F401
max-line-length = 79
